--- a/style.css
+++ b/style.css
@@ -15,9 +15,56 @@ header{
   background-color: rgb(29, 145, 207);
 }
 
+.card{
+  border: 1px solid blue;
+  height: 200px;
+  margin: 10px 0;
+  border-radius: 10px;
+}
 /* HEADER */
 .top-bar{
   display: flex;
   justify-content: space-between;
   padding: 10px;
 }
+
+/* MAIN */
+.row{
+  display: flex;
+  flex-direction: column;
+}
+
+.col{
+  width: 100%;
+}
+
+.demo-app .card{
+  background-color: rgb(103, 165, 198);
+}
+
+.strategic-pl{
+  background-color: rgb(184, 128, 237);
+}
+
+.developement{
+  background-color: white;
+  padding: 20px;
+  justify-content: space-between;
+}
+
+.arrow{
+  border-radius: 50%;
+  background-color: rgb(184, 128, 237);
+  padding: 10px;
+}
+
+.developement, .planning{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.planning{
+  justify-content: space-evenly;
+}
+
