--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header{
   margin: 10px 0;
   border-radius: 10px;
 }
+
 /* HEADER */
 .top-bar{
   display: flex;
@@ -40,9 +41,10 @@ header{
 
 .demo-app .card{
   background-color: rgb(103, 165, 198);
+  padding: 20px;
 }
 
-.strategic-pl{
+.strategic-pl, .benefits{
   background-color: rgb(184, 128, 237);
 }
 
@@ -68,3 +70,37 @@ header{
   justify-content: space-evenly;
 }
 
+.testimonials{
+  display: flex;
+  flex-direction: column;
+}
+
+.testimonials .card{
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.testimonials-txt{
+  border: 1px solid green;
+  display: flex;
+  justify-content: center;
+}
+
+.card-container .card{
+  background-color: white;
+  padding: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-container{
+  border: 1px solid rgb(220, 117, 134);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
