--- a/style.css
+++ b/style.css
@@ -4,15 +4,20 @@
   box-sizing: border-box;
 }
 
+body{
+  font-family:'PT Sans', sans-serif;
+  font-size: 1.3rem;
+}
+
 .container{
   border: 1px solid black;
   max-width: 1440px;
-  width: 90%;
+  width: 98%;
   margin: 0 auto;
 }
 
 header{
-  background-color: rgb(29, 145, 207);
+  background-color: #0084FD;
 }
 
 .card{
@@ -30,7 +35,45 @@ header{
 .top-bar{
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 20px;
+}
+
+.logo img{
+  width: 100px;
+}
+
+.menu{
+  color: white;
+  display: flex;
+  align-items: center;
+}
+
+.menu span, .menu button{
+  margin: 0 20px;
+}
+
+.menu button{
+  padding: 15px;
+  border-radius: 30px;
+  font-size: 1.3rem;
+}
+
+.ham-menu{
+  display: none;
+  color: white;
+}
+
+/* RESPONSIVE HEADER */
+@media screen and (max-width: 992px){
+  .ham-menu{
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem;
+  }
+
+  .menu{
+    display: none;
+  }
 }
 
 /* MAIN */
