--- a/style.css
+++ b/style.css
@@ -83,6 +83,10 @@ header{
   flex-direction: column;
 }
 
+.demo-sec .col:nth-child(2){
+  height: 100%;
+}
+
 .demo-sec .card{
   background-color: #B5DDFF;
   padding: 0 20px;
@@ -93,9 +97,13 @@ header{
 }
 
 .demo-sec .card span{
-  color: #0084FD;padding-bottom: 50px;
+  color: #0084FD;
   font-weight: bold;
   font-size: 1.7rem;
+}
+
+.demo-txt span{
+  padding-bottom: 50px;
 }
 
 .demo-sec .card p{
@@ -138,6 +146,24 @@ header{
   height: 400px;
 }
 
+.clean-code, .web-design, .develop, .brand{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fa-file-code, .fa-compass-drafting, .fa-laptop-code, .fa-bullhorn{
+  color: #0084FD;
+  font-size: 5.5em;
+  margin: 20px;
+}
+
+.clean-code p, .web-design p, .develop p, .brand p{
+  text-align: center;
+}
+
+
+
 /* RESPONSIVE DEMO-APP*/
 @media screen and (min-width: 576px){
   .demo-sec .row{
@@ -155,6 +181,20 @@ header{
 
   .demo-sec .row:last-child .col{
     width: calc(100% / 3 - 20px);
+  }
+
+  .demo{
+    align-items: flex-start;
+  }
+}
+
+@media screen and (min-width: 1200px){
+  .demo{
+    flex-direction: row;
+  }
+
+  .demo-img{
+    margin: 60px 20px 0 20px;
   }
 }
 
