--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header{
 .card{
   border: 1px solid blue;
   margin: 10px 0;
-  border-radius: 10px;
+  border-radius: 30px;
 }
 
 .strategic-pl, .benefits, .get-started{
@@ -289,17 +289,40 @@ header{
 }
 
 
-
-
-
-
 /* TESTIMONIALS */
 .testimonials{
   display: flex;
   flex-direction: column;
+  font-size: 1.4rem;
+}
+
+.testimonials-txt{
+  border: 1px solid green;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.testimonials-txt span:first-of-type{
+  margin: 20px 0;
+  text-transform: uppercase;
+}
+
+.testimonials-txt span:last-of-type{
+  text-align: center;
+  color: #9792E4;
+  font-size: 2.3rem;
+  font-weight: bold;
+}
+
+.testimonials-txt p{
+  text-align: center;
+  margin: 20px 0;
 }
 
 .testimonials .card{
+  color: white;
+  background-color: #9792E4;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -307,12 +330,49 @@ header{
   justify-content: space-between;
 }
 
-.testimonials-txt{
-  border: 1px solid green;
-  display: flex;
-  justify-content: center;
+.testimonial-img{
+  border: 1px solid orangered;
 }
 
+.testimonial-img img{
+  width: 210px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.text{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.testimonials .text p{
+  text-align: center;
+  margin: 20px;
+}
+
+.testimonials .text span{
+  margin: 20px 0;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+
+
+/* RESPONSIVE TESTIMONIALS */
+@media screen and (min-width: 576px){
+  .testimonials .card{
+    flex-direction: row;
+  }
+
+  .testimonials .text p{
+    margin-left: 40px;
+  }
+}
+
+
+/* BENEFITS */
 .card-container .card{
   background-color: white;
   padding: 20px;
