--- a/style.css
+++ b/style.css
@@ -373,26 +373,95 @@ header{
 
 
 /* BENEFITS */
-.card-container .card{
-  background-color: white;
-  padding: 20px;
-  width: 100%;
+.benefits-title{
+  color: white;
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  padding: 60px;
 }
 
 .card-container{
   border: 1px solid rgb(220, 117, 134);
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
-.benefits-title{
-  display: flex;
-  justify-content: center;
+.card-container .card{
+  background-color: white;
+  padding: 20px;
+  width: 100%;
 }
+
+.benefits-text{
+  display: flex;
+  flex-direction: column;
+}
+
+.benefits-text span:first-child{
+  color: #9792E4;
+  font-size: 4rem;
+  font-weight: bold;
+}
+
+.benefits-text span:nth-child(2){
+  color: #9792E4;
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 20px 0;
+}
+
+.benefits-text p{
+  color: #647A8D;
+  margin-bottom: 20px;
+}
+
+.benefits button{
+  background-color: #9792E4;
+  color: white;
+  font-weight: bold;
+  padding: 15px 50px;
+  border: none;
+  border-radius: 30px;
+}
+
+.benefits button:hover{
+  cursor: pointer;
+  box-shadow: 0 0 2px grey;
+}
+
+/* RESPONSIVE BENEFITS */
+@media screen and (min-width:576px){
+  .benefits-title{
+    font-size: 3.5rem;
+  }
+
+  .card-container{
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .benefits .card{
+    width: calc(100% / 2 - 20px);
+  }
+}
+
+@media screen and (min-width: 1200px){
+  .benefits .card{
+    width: calc(100% / 3 - 20px);
+  }
+}
+
+
+
+
+
+
+
+
 
 .about-us{
   display: flex;
