--- a/style.css
+++ b/style.css
@@ -514,6 +514,11 @@ header{
   font-size: 1.2rem;
 }
 
+.about-us button:hover{
+  cursor: pointer;
+  box-shadow: 0 0 2px grey;
+}
+
 .fa-linkedin{
   margin-right: 10px;
 }
@@ -525,11 +530,11 @@ header{
   }
 
   .about-us .row .col:first-child{
-    width: 60%;
+    width: 70%;
   }
 
   .about-us .row .col:last-child{
-    width: 40%;
+    width: 30%;
   }
 }
 
@@ -540,6 +545,75 @@ header{
   align-items: center;
   justify-content: space-between;
 }
+
+.get-started-text{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.get-started-text span:first-of-type{
+  margin: 20px 0;
+  text-transform: uppercase;
+  color: #BDBAEE;
+  font-size: 1.3rem;
+}
+
+.get-started-text span:nth-child(2){
+  color: white;
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.get-started-text span:nth-child(3){
+  color: #FDC15F;
+  font-weight: bold;
+  font-size: 4rem;
+  margin-bottom: 20px;
+}
+
+.get-started .card .get-started-text p{
+  color: white;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 1.3rem;
+}
+
+.get-started button{
+  background-color: white;
+  color: #9792E4;
+  padding: 20px 70px;
+  border-radius: 30px;
+  font-weight: bold;
+  font-size: 1.3rem;
+  border: none;
+  margin-bottom: 20px;
+}
+
+.get-started button:hover{
+  cursor: pointer;
+  box-shadow: 0 0 2px grey;
+}
+
+.get-started p:last-of-type{
+  color: white;
+  text-align: center;
+  font-size: 1rem;
+}
+
+/* RESONSIVE GET STARTED */
+@media screen and (min-width: 576px){
+  .get-started-text span:nth-child(2){
+    font-size: 4rem;
+  }
+
+  .get-started-text span:nth-child(3){
+    font-size: 7rem;
+  }
+}
+
 
 /* FOOTER*/
 footer{
