--- a/style.css
+++ b/style.css
@@ -6,13 +6,17 @@
 
 body{
   font-family:'PT Sans', sans-serif;
+  line-height: 1.6;
 }
 
 .container{
-  border: 1px solid black;
   max-width: 1440px;
   width: 90%;
   margin: 0 auto;
+}
+
+main .container, footer .container{
+  padding: 40px 0;
 }
 
 header{
@@ -20,13 +24,17 @@ header{
 }
 
 .card{
-  border: 1px solid blue;
   margin: 10px 0;
   border-radius: 30px;
 }
 
 .strategic-pl, .benefits, .get-started{
   background-color: #9792E4;
+}
+
+button:hover{
+  cursor: pointer;
+  box-shadow: 0 0 5px grey;
 }
 
 /* HEADER */
@@ -51,6 +59,7 @@ header{
 .menu button{
   padding: 15px;
   border-radius: 30px;
+  border: none;
   font-size: 1.3rem;
 }
 
@@ -62,7 +71,7 @@ header{
 }
 
 /* RESPONSIVE HEADER */
-@media screen and (min-width: 992px){
+@media screen and (min-width: 1200px){
   .ham-menu{
     display: none;
   }
@@ -80,10 +89,6 @@ header{
 .row{
   display: flex;
   flex-direction: column;
-}
-
-.demo-sec .col:nth-child(2){
-  height: 100%;
 }
 
 .demo-sec .card{
@@ -127,11 +132,6 @@ header{
   font-weight: bold;
 }
 
-.demo button:hover{
-  cursor: pointer;
-  box-shadow: 0 0 5px gray;
-}
-
 .fa-apple{
   padding: 0 10px;
 }
@@ -161,8 +161,6 @@ header{
   text-align: center;
 }
 
-
-
 /* RESPONSIVE DEMO-APP*/
 @media screen and (min-width: 576px){
   .demo-sec .row{
@@ -174,7 +172,7 @@ header{
     width: 64%;
   }
 
-  .demo-sec .row.row:first-child .col:last-child{
+  .demo-sec .row:first-child .col:last-child{
     width: 34%;
   }
 
@@ -184,6 +182,11 @@ header{
 
   .demo{
     align-items: flex-start;
+  }
+
+  .demo-sec .row:first-child .col:nth-child(2) .card{
+    max-height: 100%;
+    height: 97%;
   }
 }
 
@@ -205,6 +208,7 @@ header{
 }
 
 .planning{
+  padding: 0 20px;
   justify-content: space-evenly;
 }
 
@@ -297,7 +301,6 @@ header{
 }
 
 .testimonials-txt{
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -330,10 +333,6 @@ header{
   justify-content: space-between;
 }
 
-.testimonial-img{
-  border: 1px solid orangered;
-}
-
 .testimonial-img img{
   width: 210px;
   height: 200px;
@@ -358,8 +357,6 @@ header{
   font-weight: bold;
 }
 
-
-
 /* RESPONSIVE TESTIMONIALS */
 @media screen and (min-width: 576px){
   .testimonials .card{
@@ -380,11 +377,10 @@ header{
   text-align: center;
   display: flex;
   justify-content: center;
-  padding: 60px;
+  padding: 30px;
 }
 
 .card-container{
-  border: 1px solid rgb(220, 117, 134);
   display: flex;
   flex-direction: column;
 }
@@ -514,11 +510,6 @@ header{
   font-size: 1.2rem;
 }
 
-.about-us button:hover{
-  cursor: pointer;
-  box-shadow: 0 0 2px grey;
-}
-
 .fa-linkedin{
   margin-right: 10px;
 }
@@ -592,11 +583,6 @@ header{
   margin-bottom: 20px;
 }
 
-.get-started button:hover{
-  cursor: pointer;
-  box-shadow: 0 0 2px grey;
-}
-
 .get-started p:last-of-type{
   color: white;
   text-align: center;
@@ -621,7 +607,6 @@ footer{
 }
 
 .bottom{
-  border: 1px solid white;
   display: flex;
   flex-direction: column;
   align-items: center;
